--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -4,11 +4,10 @@
  :root {
     ---primary: #55833D;
     //defaultLayout
-    --default-layout-height: 60px;
-    --default-layout-wight: 1062px;
+    --default-layout-height: 70px;
+    --default-layout-wight: 1100px;
 
-
-
+    --text-color: #333
  }
 
  //giup cho do tinh toan wwight hight khi co boder hay padding
@@ -30,4 +29,51 @@
     line-height: 1.5;
 
 
+ }
+
+ button,
+ input,
+ [tabindex] {
+    outline: none;
+ }
+
+ a[href] {
+    color: var(--text-color);
+    text-decoration: none;
+
+ }
+
+ li {
+    list-style: none;
+ }
+
+ //scollbar
+ html ::-webkit-scrollbar {
+    border-radius: 0px;
+    width: 8px;
+ }
+
+ html *::-webkit-scrollbar {
+    border-radius: 0;
+    width: 8px;
+ }
+
+ html ::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(255, 255, 255, 0.08);
+ }
+
+ html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(255, 255, 255, .08);
+ }
+
+ html ::-webkit-scrollbar-track {
+    border-radius: 0px;
+    background-color: rgba(0, 0, 0, 0);
+ }
+
+ html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
  }
