--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -9,6 +9,152 @@
 
 .inner {
     height: 100%;
-    width: var(--default-layout-weight);
-    background-color: #55833D;
+    width: var(--default-layout-wight);
+    display: flex;
+    justify-content: space-between;
+}
+
+
+
+.header-left {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+
+    img {
+        height: 60px;
+    }
+
+    .search-result {
+        width: 350px;
+    }
+
+    input {
+        width: 350px;
+        padding: 12px 60px 12px 16px;
+        border-radius: 92px;
+        // border: 1px solid rgb(68, 68, 68);
+        border: 1.5px solid transparent;
+        font-size: 16px;
+        background-color: rgba(22, 24, 35, 0.06);
+
+        &:focus-within {
+            border: 1.5px solid rgba(22, 24, 35, 0.2);
+        }
+
+        &:hover {
+            border: 1.5px solid rgba(22, 24, 35, 0.2);
+        }
+    }
+
+    .search {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .button-icon {
+        position: absolute;
+        right: 0.5px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+
+        button {
+            border: none;
+            padding: 5px;
+        }
+
+        .icon-search {
+            border-left: 1px solid rgba(22, 24, 35, 0.12);
+            padding: 12px 16px;
+            border-top-right-radius: 92px;
+            border-bottom-right-radius: 92px;
+
+            &:hover {
+                background-color: rgba(22, 24, 35, 0.03);
+            }
+
+            &:active {
+                background-color: rgba(22, 24, 35, 0.06);
+
+            }
+        }
+
+        .icon {
+            color: rgb(88, 82, 82);
+            font-size: 16px;
+        }
+    }
+
+    input:not(:placeholder-shown)~.icon-search {
+        background-color: red;
+    }
+
+}
+
+.header-right {
+    ul {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    li {
+
+        width: 80px;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
+
+    button {
+        border: none;
+        padding: 10px;
+        background-color: white;
+    }
+
+    .icon {
+        height: 20px;
+        color: gray;
+    }
+
+    p {
+        font-size: 14px;
+    }
+
+    .icon-login {
+        margin-left: 30px;
+        width: 112px;
+        cursor: pointer;
+    }
+}
+
+.typpy-user {
+    position: absolute;
+    top: 0;
+    left: 100%;
+    transform: translate(-50%, 0);
+    margin-top: 10px;
+
+}
+
+.typpy-user-control {
+    position: relative;
+    display: inline-block;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+
+.user-avatar {
+    width: 32px;
+    height: 32px;
+    object-fit: cover;
+    border-radius: 50%;
 }
