--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,7 +1,7 @@
 .wrapper {
     // min-width: 100%;
     padding: 9px 16px;
-    border-radius: 5px;
+
     font-weight: 600;
     font-size: 1.5rem;
     cursor: pointer;
@@ -9,11 +9,9 @@
     display: flex;
     justify-content: center;
 
-
-
-    +.wrapper {
-        margin-left: 8px;
-    }
+    // +.wrapper {
+    //     margin-left: 8px;
+    // }
 
     &.disabled {
         pointer-events: none;
@@ -24,19 +22,22 @@
 
 .buttonLogin {
     width: 120px !important;
+    border-radius: 5px;
 }
 
 .buttonProfile,
 .buttonLogout {
     width: 150px;
+    border-radius: 5px;
 }
 
 .buttonLogin,
-.buttonProfile {
+.buttonProfile,
+.buttonLoginFrom {
     background-color: rgb(254, 44, 85) !important;
     border: 2px solid rgb(254, 44, 85);
     color: white !important;
-
+    border-radius: 5px;
     align-items: center;
 
     &:hover {
@@ -46,13 +47,98 @@
 }
 
 .btnRegister,
-.buttonLogout {
+.buttonLogout,
+.btnAdd {
     background-color: white;
     border: 2px solid rgb(254, 44, 85);
     align-items: center;
+    color: rgb(254, 44, 85);
+    border-radius: 5px;
 
     &:hover {
         color: white;
         background: linear-gradient(0deg, rgba(0, 0, 0, 0.06), rgba(0, 0, 0, 0.06)), rgb(254, 44, 85);
+    }
+}
+
+.btnCategory {
+    background-color: var(---primary);
+    border-radius: 9999px;
+    border: none;
+    color: white;
+    width: 300px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+}
+
+.btnDetail {
+    // border: 1px solid var(---primary);
+    border: 1px solid transparent;
+    border-radius: 5px;
+    background-color: transparent;
+
+    &:hover {
+        // background-color: rgba(140, 195, 66, 0.8);
+        // border: 1px solid rgba(140, 195, 66, 0.8);
+        transition: background-color 0.5s ease;
+        color: var(---primary);
+        // transition: color 0.5s ease;
+
+    }
+}
+
+.btnQuality {
+
+    width: 50px;
+    height: 50px;
+    padding: 0;
+    /* Loại bỏ khoảng trắng bên trong nút */
+    // border: 1px solid gray;
+    /* Loại bỏ đường viền */
+    border: none;
+    text-align: center;
+    display: flex;
+    align-items: center;
+
+    &:hover {
+        background-color: rgba(22, 24, 35, 0.1);
+    }
+
+    font-size: 20px;
+
+}
+
+.btnControl {
+    border: none;
+    width: 50px;
+    height: 50px;
+    // border-left: 1px solid rgba(22, 24, 35, 0.3);
+    // border-right: 1px solid rgba(22, 24, 35, 0.3);
+    background-color: white;
+    text-align: center;
+    display: flex;
+    align-items: center;
+}
+
+.btnEye {
+    border: none;
+    background-color: transparent;
+
+    position: absolute;
+    right: 0;
+
+}
+
+.upDate {
+    background-color: transparent;
+    border: 1px solid #55833D;
+    color: var(---primary);
+    border-radius: 5px;
+
+    &:hover {
+        color: white;
+        background-color: #8CC342;
+        border: 1px solid #8CC342;
     }
 }
