--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -142,3 +142,16 @@
         border: 1px solid #8CC342;
     }
 }
+
+.Plus {
+    background-color: transparent;
+    border: 2px solid rgba(22, 24, 35, 0.09);
+
+    border-radius: 5px;
+
+    &:hover {
+
+        background-color: rgba(22, 24, 35, 0.09);
+        transition-duration: 0.2s;
+    }
+}
