--- a/src/Layout/components/QuanLySanPham/QuanLySanPham.module.scss
+++ b/src/Layout/components/QuanLySanPham/QuanLySanPham.module.scss
@@ -13,6 +13,40 @@
     color: gray;
 }
 
+
 .wrapper {
     padding: 0 30px;
+}
+
+.catogory-item {
+    display: flex;
+    flex-direction: row;
+    width: 250px;
+    padding: 5px;
+
+    p {
+        width: 150px;
+    }
+
+    input {
+        padding: 10px;
+    }
+
+    &:hover {
+        background-color: #FAFAFA;
+    }
+}
+
+.catogory {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    justify-items: start;
+
+
+}
+
+.title {
+    background-color: rgba(22, 24, 35, 0.03);
+    padding: 5px;
+    margin-bottom: 10px;
 }
