--- a/src/pages/ChiTietSanPham/ChiTietSanPham.module.scss
+++ b/src/pages/ChiTietSanPham/ChiTietSanPham.module.scss
@@ -4,6 +4,7 @@
     grid-template-columns: 1fr 2fr;
     gap: 40px;
     margin: 20px 0;
+    min-height: 800px;
 }
 
 .button-quality {
@@ -20,4 +21,37 @@
         font-size: 18px;
         text-align: center;
     }
+}
+
+.wrapper-image {
+    ul {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    }
+}
+
+.overlay {
+    position: fixed;
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    inset: 0px;
+    background-color: rgba(0, 0, 0, 0.5);
+    -webkit-tap-highlight-color: transparent;
+    z-index: 1;
+    opacity: 1;
+    transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 2ms;
+
+    /* Hiệu ứng transition */
+
+
+}
+
+.formDN {
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    z-index: 999
 }
