cart & payment online & admin

--- a/src/Layout/HeaderOnly/HeaderOnly.module.scss
+++ b/src/Layout/HeaderOnly/HeaderOnly.module.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     // background-color: #F5F5FA;
+    margin-top: 100px;
 
 }
 
@@ -13,6 +14,7 @@
     justify-content: space-between;
 
     margin: 30px 0;
+    margin-top: 50px;
 }
 
 .container {
