--- a/src/Layout/components/SidebarAdmin/SidebarAdmin.module.scss
+++ b/src/Layout/components/SidebarAdmin/SidebarAdmin.module.scss
@@ -1,11 +1,13 @@
 .wrapper {
     // width: var(--default-layout-wight);
-
+    // margin-top: 50px;
     width: 100%;
     // border-right: 2px solid rgba(22, 24, 35, 0.09);
 
     // justify-content: center;
     // background-color: #55833D;
+    padding-top: 90px;
+
     nav {
         width: 100%;
         display: flex;
