--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -33,7 +33,8 @@
 
 .buttonLogin,
 .buttonProfile,
-.buttonLoginFrom {
+.buttonLoginFrom,
+.bntOrder {
     background-color: rgb(254, 44, 85) !important;
     border: 2px solid rgb(254, 44, 85);
     color: white !important;
@@ -44,6 +45,10 @@
         background: linear-gradient(0deg, rgba(0, 0, 0, 0.06), rgba(0, 0, 0, 0.06)), rgb(254, 44, 85);
     }
 
+}
+
+.bntOrder {
+    width: 100%;
 }
 
 .btnRegister,
@@ -60,6 +65,7 @@
         background: linear-gradient(0deg, rgba(0, 0, 0, 0.06), rgba(0, 0, 0, 0.06)), rgb(254, 44, 85);
     }
 }
+
 
 .btnCategory {
     background-color: var(---primary);
