--- a/src/components/GlobalStyles/GlobalStyle.scss
+++ b/src/components/GlobalStyles/GlobalStyle.scss
@@ -50,35 +50,35 @@
  }
 
  //scollbar
- html ::-webkit-scrollbar {
-    border-radius: 0px;
-    width: 8px;
- }
+ //  html ::-webkit-scrollbar {
+ //     border-radius: 0px;
+ //     width: 8px;
+ //  }
 
- html *::-webkit-scrollbar {
-    border-radius: 0;
-    width: 8px;
- }
+ //  html *::-webkit-scrollbar {
+ //     border-radius: 0;
+ //     width: 8px;
+ //  }
 
- html ::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    background-color: rgba(255, 255, 255, 0.08);
- }
+ //  html ::-webkit-scrollbar-thumb {
+ //     border-radius: 4px;
+ //     background-color: rgba(255, 255, 255, 0.08);
+ //  }
 
- html *::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    background-color: rgba(255, 255, 255, .08);
- }
+ //  html *::-webkit-scrollbar-thumb {
+ //     border-radius: 4px;
+ //     background-color: rgba(255, 255, 255, .08);
+ //  }
 
- html ::-webkit-scrollbar-track {
-    border-radius: 0px;
-    background-color: rgba(0, 0, 0, 0);
- }
+ //  html ::-webkit-scrollbar-track {
+ //     border-radius: 0px;
+ //     background-color: rgba(0, 0, 0, 0);
+ //  }
 
- html *::-webkit-scrollbar-track {
-    border-radius: 0;
-    background-color: rgba(0, 0, 0, 0);
- }
+ //  html *::-webkit-scrollbar-track {
+ //     border-radius: 0;
+ //     background-color: rgba(0, 0, 0, 0);
+ //  }
 
 
 
@@ -108,5 +108,17 @@
 
     &:hover {
        background-color: #55833D;
+    }
+ }
+
+ @media print {
+
+    html,
+    body {
+       height: 100vh;
+       /* Use 100% here to support printing more than a single page*/
+       margin: 0 !important;
+       padding: 0 !important;
+       overflow: hidden;
     }
  }
