--- a/src/components/Images/Images.module.scss
+++ b/src/components/Images/Images.module.scss
@@ -31,3 +31,38 @@
 .ProductAdmin {
     width: 100px;
 }
+
+.imageSmall {
+    padding: 5px;
+    // border: 1px solid gray;
+    margin-right: 5px;
+}
+
+.imageSmallChecked {
+    border: 1px solid gray;
+}
+
+.noOrder {
+    height: 200px;
+    width: 200px;
+    margin: 30px 0;
+}
+
+.imageOrderList {
+
+    height: 60px;
+    width: auto;
+    background-color: transparent;
+    // border: 1px solid gray;
+    // padding: 5px;
+}
+
+.logo {
+    height: 60px;
+
+    width: 150px;
+}
+
+.Total {
+    width: 60px;
+}
