--- a/src/pages/Admin/Admin.module.scss
+++ b/src/pages/Admin/Admin.module.scss
@@ -1,8 +1,27 @@
 .inner {
     display: grid;
     grid-template-columns: 1fr 4fr;
-    margin: 30px 0;
 
 }
 
 .wrapper {}
+
+.sidebar {
+
+    position: sticky;
+    top: 0;
+    // height: 100%;
+    height: 600px;
+    /* Chiều cao của màn hình */
+
+
+    /* Màu nền của sidebar */
+    overflow-y: auto;
+    /* Cho phép cuộn nếu nội dung quá dài */
+
+    /* Đảm bảo sidebar hiển thị trên mọi phần khác */
+}
+
+.component-render {
+    margin-top: 50px;
+}
