--- a/src/pages/OderPage/OrderPage.module.scss
+++ b/src/pages/OderPage/OrderPage.module.scss
@@ -19,6 +19,20 @@
     }
 }
 
+.header-dilivery {
+    // background-color: rgb(151, 61, 61);
+    padding: 9px 16px;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+
+    span {
+        color: rgb(36, 36, 36);
+
+    }
+}
+
 .inner {
     display: flex;
     justify-content: center;
@@ -34,7 +48,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    align-items: center
+    align-items: center;
 }
 
 .item-order {
@@ -46,12 +60,24 @@
 }
 
 .info {
-    padding: 17px 20px;
+    padding: 0 17px 20px 20px;
     border-bottom: 1px solid #f5f5f5;
     background: #fff;
     border-top-right-radius: 6px;
     border-top-left-radius: 6px;
     width: 100%
+}
+
+.info-address {
+    margin-top: 30px;
+    padding: 10px;
+    border-bottom: 1px solid #f5f5f5;
+    background: #fff;
+    // border-top-right-radius: 6px;
+    // border-top-left-radius: 6px;
+    width: 100%;
+    border: 1px solid rgb(211, 201, 201);
+    border-radius: 5px;
 }
 
 .counter-order {
@@ -69,4 +95,14 @@
     height: 30px;
     text-align: center;
     border-color: gray;
+}
+
+.total {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 17px 20px;
+    background: #fff;
+    border-bottom-right-radius: 6px;
+    border-bottom-left-radius: 6px;
 }
