--- a/src/components/BoxCategory/BoxCategory.module.scss
+++ b/src/components/BoxCategory/BoxCategory.module.scss
@@ -17,6 +17,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 40px;
+    grid-row-gap: 70px;
     width: 100%;
     margin: 20px 0;
 }
