--- a/src/Layout/components/DetailOrder/DetailOrder.module.scss
+++ b/src/Layout/components/DetailOrder/DetailOrder.module.scss
@@ -1,3 +1,8 @@
+.wrapper {
+    min-height: 750px;
+
+}
+
 .info {
     margin: 20px 0;
     display: grid;
@@ -28,6 +33,8 @@
     th,
     td {
         padding: 10px;
+        font-size: 16px;
+
         text-align: left;
     }
 
@@ -37,6 +44,7 @@
 
     tfoot {
         font-weight: bold;
+        font-size: 16px;
 
         tr {
             td {
