--- a/src/Layout/components/ThongKe/ThongKe.module.scss
+++ b/src/Layout/components/ThongKe/ThongKe.module.scss
@@ -33,6 +33,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-gap: 30px;
+    padding-top: 50px;
 
     .title {
         margin: 5px 0;
