--- a/src/pages/OderPage/OrderPage.module.scss
+++ b/src/pages/OderPage/OrderPage.module.scss
@@ -1,6 +1,6 @@
 .wrapper {
     width: var(--default-layout-wight);
-    min-height: 1000px;
+    min-height: 700px;
 
 }
 
@@ -105,4 +105,9 @@
     background: #fff;
     border-bottom-right-radius: 6px;
     border-bottom-left-radius: 6px;
+}
+
+.old-price {
+    text-decoration: line-through;
+
 }
